# Aito

./: CMakeLists.txt  LICENSE NOTICE  README.md
src/: CMakeLists.txt  aito.h  geometry.cpp  geometry.h  interaction.cpp  interaction.h  main.cpp  medium.h  shape.cpp  shape.h  vecmath.cpp  vecmath.h
